Infrastructure/main.tf
# resource "aws_vpc" "main" {
#   cidr_block           = var.vpc_cidr
#   enable_dns_support   = true
#   enable_dns_hostnames = true
# 
#   tags = {
#     Name = "cloud-native-vpc"
#   }
# }
# 
# resource "aws_internet_gateway" "gw" {
#   vpc_id = aws_vpc.main.id
# 
#   tags = {
#     Name = "cloud-native-igw"
#   }
# }
